--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,3 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
 tokio = { version = "1.0", features = ["full"] }
 tower-http = { version = "0.3.4", features = ["cors"] }
+ring = "0.16.20"
+sha2 = "*"
+hex = "0.4.3"
+base64 = "0.13.0"
