--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,3 +16,4 @@ ring = "0.16.20"
 sha2 = "*"
 hex = "0.4.3"
 base64 = "0.13.0"
+sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
