--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,8 +10,10 @@ dotenv = "0.15.0"
 axum = "0.6.18"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.24", features = ["full"] }
 tower-http = { version = "0.3.4", features = ["cors"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 ring = "0.16.20"
 sha2 = "*"
 hex = "0.4.3"
