feat: implement JWT token generation

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,3 +19,4 @@ sha2 = "*"
 hex = "0.4.3"
 base64 = "0.13.0"
 sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
+jsonwebtoken = "8.3.0"
